tests/snapshots/construction_payloads__construction_payloads_delegation.snap
---
source: tests/construction_payloads.rs
expression: response
---
Ok(
    ConstructionPayloadsResponse {
        unsigned_transaction: "{\"randomOracleInput\":\"0000000334411FBC9BF58536335A3B711494DA6EC9916AFC520F389B66D00796DCD9BA7A34411FBC9BF58536335A3B711494DA6EC9916AFC520F389B66D00796DCD9BA7A0131D887E9AE69AF4D40469B25411CB7EB94CDAD60E23B71E608B0A58FBCD408000002570106CC3C000000008000000000000000E3400000784BEBE8403C5B535B7B0217536717020B53275302337B270213531B537343174B7B3B4200001A00000000000000000000000000000000\",\"signerInput\":{\"prefix\":[\"34411FBC9BF58536335A3B711494DA6EC9916AFC520F389B66D00796DCD9BA7A\",\"34411FBC9BF58536335A3B711494DA6EC9916AFC520F389B66D00796DCD9BA7A\",\"0131D887E9AE69AF4D40469B25411CB7EB94CDAD60E23B71E608B0A58FBCD408\"],\"suffix\":[\"5081BDB595B478042FAFA43C0000058E0000000000000002000000007866C100\",\"0000000002C0000216E6F69746167656C656420726F662065726568207473656\",\"0000000000000000000000000000000000000000000000000000000000000000\"]},\"payment\":null,\"stakeDelegation\":{\"delegator\":\"B62qkXajxfnicuCNtaurdAhQpkFsqjoyPJuw53aeJP848bsa3Ne3RvB\",\"new_delegate\":\"B62qiburnzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzmp7r7UN6X\",\"fee\":\"1010000000\",\"nonce\":\"355\",\"memo\":\"memo test here for delegation!\",\"valid_until\":\"200009999\"}}",
        payloads: [
            SigningPayload {
                address: None,
                account_identifier: Some(
                    AccountIdentifier {
                        address: "B62qkXajxfnicuCNtaurdAhQpkFsqjoyPJuw53aeJP848bsa3Ne3RvB",
                        sub_account: None,
                        metadata: Some(
                            Object {
                                "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                            },
                        ),
                    },
                ),
                hex_bytes: "7B2272616E646F6D4F7261636C65496E707574223A2230303030303030333334343131464243394246353835333633333541334237313134393444413645433939313641464335323046333839423636443030373936444344394241374133343431314642433942463538353336333335413342373131343934444136454339393136414643353230463338394236364430303739364443443942413741303133314438383745394145363941463444343034363942323534313143423745423934434441443630453233423731453630384230413538464243443430383030303030323537303130364343334330303030303030303830303030303030303030303030303045333430303030303738344245424538343033433542353335423742303231373533363731373032304235333237353330323333374232373032313335333142353337333433313734423742334234323030303031413030303030303030303030303030303030303030303030303030303030303030222C227369676E6572496E707574223A7B22707265666978223A5B2233343431314642433942463538353336333335413342373131343934444136454339393136414643353230463338394236364430303739364443443942413741222C2233343431314642433942463538353336333335413342373131343934444136454339393136414643353230463338394236364430303739364443443942413741222C2230313331443838374539414536394146344434303436394232353431314342374542393443444144363045323342373145363038423041353846424344343038225D2C22737566666978223A5B2235303831424442353935423437383034324641464134334330303030303538453030303030303030303030303030303230303030303030303738363643313030222C2230303030303030303032433030303032313645364636393734363136373635364336353634323037323646363632303635373236353638323037343733363536222C2230303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030225D7D2C227061796D656E74223A6E756C6C2C227374616B6544656C65676174696F6E223A7B2264656C656761746F72223A22423632716B58616A78666E696375434E7461757264416851706B4673716A6F79504A7577353361654A50383438627361334E6533527642222C226E65775F64656C6567617465223A2242363271696275726E7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A7A6D70377237554E3658222C22666565223A2231303130303030303030222C226E6F6E6365223A22333535222C226D656D6F223A226D656D6F2074657374206865726520666F722064656C65676174696F6E21222C2276616C69645F756E74696C223A22323030303039393939227D7D",
                signature_type: Some(
                    SchnorrPoseidon,
                ),
            },
        ],
    },
)
