tests/snapshots/construction_payloads__construction_payloads_no_metadata.snap
---
source: tests/construction_payloads.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Metadata is required for payloads request",
        ),
    ),
)
