tests/snapshots/construction_payloads__construction_payloads_payments.snap
---
source: tests/construction_payloads.rs
expression: response
---
Ok(
    ConstructionPayloadsResponse {
        unsigned_transaction: "{\"randomOracleInput\":\"0000000327EA74CB13D3F1864C2E60C967577C055FD458D5AF93A59371905B8490B6567827EA74CB13D3F1864C2E60C967577C055FD458D5AF93A59371905B8490B656785E6737A0AC0A147918437FC8C21EA57CECFB613E711CA2E4FD328401657C291C000002574FC00000000000008000000000000000600000000239000040340B531B1B7B1A025B535B7B0217536717020B532753420000000000000000000006000000000000000034F3FFFFFFFFFFFC\",\"signerInput\":{\"prefix\":[\"27EA74CB13D3F1864C2E60C967577C055FD458D5AF93A59371905B8490B65678\",\"27EA74CB13D3F1864C2E60C967577C055FD458D5AF93A59371905B8490B65678\",\"5E6737A0AC0A147918437FC8C21EA57CECFB613E711CA2E4FD328401657C291C\"],\"suffix\":[\"31BDB1B195A05804000138800000000C000000000000000200000000000007E4\",\"000000000300000000000000000000021657265682074736574206F6D656D202\",\"000000000000000000000000000000000000000007FFFFFFFFFFF9E580000000\"]},\"payment\":{\"to\":\"B62qoDWfBZUxKpaoQCoFqr12wkaY84FrhxXNXzgBkMUi2Tz4K8kBDiv\",\"from\":\"B62qkUHaJUHERZuCHQhXCQ8xsGBqyYSgjQsKnKN5HhSJecakuJ4pYyk\",\"fee\":\"1010\",\"token\":\"1\",\"nonce\":\"3\",\"memo\":\"hello, memo test here!\",\"amount\":\"18446744073709501616\",\"valid_until\":\"20000\"},\"stakeDelegation\":null}",
        payloads: [
            SigningPayload {
                address: None,
                account_identifier: Some(
                    AccountIdentifier {
                        address: "B62qkUHaJUHERZuCHQhXCQ8xsGBqyYSgjQsKnKN5HhSJecakuJ4pYyk",
                        sub_account: None,
                        metadata: Some(
                            Object {
                                "token_id": String("1"),
                            },
                        ),
                    },
                ),
                hex_bytes: "7B2272616E646F6D4F7261636C65496E707574223A2230303030303030333237454137344342313344334631383634433245363043393637353737433035354644343538443541463933413539333731393035423834393042363536373832374541373443423133443346313836344332453630433936373537374330353546443435384435414639334135393337313930354238343930423635363738354536373337413041433041313437393138343337464338433231454135374345434642363133453731314341324534464433323834303136353743323931433030303030323537344643303030303030303030303030303830303030303030303030303030303036303030303030303032333930303030343033343042353331423142374231413032354235333542374230323137353336373137303230423533323735333432303030303030303030303030303030303030303030363030303030303030303030303030303033344633464646464646464646464643222C227369676E6572496E707574223A7B22707265666978223A5B2232374541373443423133443346313836344332453630433936373537374330353546443435384435414639334135393337313930354238343930423635363738222C2232374541373443423133443346313836344332453630433936373537374330353546443435384435414639334135393337313930354238343930423635363738222C2235453637333741304143304131343739313834333746433843323145413537434543464236313345373131434132453446443332383430313635374332393143225D2C22737566666978223A5B2233314244423142313935413035383034303030313338383030303030303030433030303030303030303030303030303230303030303030303030303030374534222C2230303030303030303033303030303030303030303030303030303030303030323136353732363536383230373437333635373432303646364436353644323032222C2230303030303030303030303030303030303030303030303030303030303030303030303030303030303746464646464646464646463945353830303030303030225D7D2C227061796D656E74223A7B22746F223A22423632716F445766425A55784B70616F51436F4671723132776B6159383446726878584E587A67426B4D556932547A344B386B42446976222C2266726F6D223A22423632716B5548614A554845525A7543485168584351387873474271795953676A51734B6E4B4E354868534A6563616B754A347059796B222C22666565223A2231303130222C22746F6B656E223A2231222C226E6F6E6365223A2233222C226D656D6F223A2268656C6C6F2C206D656D6F2074657374206865726521222C22616D6F756E74223A223138343436373434303733373039353031363136222C2276616C69645F756E74696C223A223230303030227D2C227374616B6544656C65676174696F6E223A6E756C6C7D",
                signature_type: Some(
                    SchnorrPoseidon,
                ),
            },
        ],
    },
)
